--- a/styles/main.css
+++ b/styles/main.css
@@ -1621,7 +1621,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
     padding: 0;
     border-radius: 0px;
     border: none;
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid transparent !important;
   
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
@@ -1630,13 +1630,13 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
   }
   
   .tab01 .nav-link.active {
-    color: #333;
-    border-color: #797979;
+    color: #333 !important;
+    border-color: #797979 !important;
   }
   
   .tab01 .nav-link:hover {
-    color: #333;
-    border-color: #797979;
+    color: #333!important;
+    border-color: #797979 !important;
   }
   
   
